Tango/DLL Files/TANGO DLL for Visual Studio VC++6.0 (32 Bit)/TangoLSX_API.h


TANGOAPI int TANGOCALL LSX_EnableCommandRetry (int lLSID, BOOL bAValue);

TANGOAPI int TANGOCALL LSX_MoveEx (int lLSID, double dX, double dY, double dZ, double dR, BOOL bRelative, BOOL bWait, int lAxisCount);

TANGOAPI int TANGOCALL LSX_SetDigitalOutputs (int lLSID, int lValue);

TANGOAPI int TANGOCALL LSX_SetDigitalOutputsE (int lLSID, int lValue);

TANGOAPI int TANGOCALL LSX_GetDigitalInputsE (int lLSID, int *plValue);

TANGOAPI int TANGOCALL LSX_SetTargetWindow (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetBPZ (int lLSID, int lAValue);

TANGOAPI int TANGOCALL LSX_SetBPZTrackballFactor (int lLSID, double dAValue);

TANGOAPI int TANGOCALL LSX_SetBPZTrackballBackLash (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_SetBPZJoyspeed (int lLSID, int lAPar, double dAValue);

TANGOAPI int TANGOCALL LSX_SetJoystickWindow (int lLSID, int lAValue);

TANGOAPI int TANGOCALL LSX_SetCurrentDelay (int lLSID, int lX, int lY, int lZ, int lR);

TANGOAPI int TANGOCALL LSX_WaitForAxisStop (int lLSID, int lAFlags, int lATimeoutValue, BOOL *pbATimeout);

TANGOAPI int TANGOCALL LSX_SetProcessMessagesProc (int lLSID, void* pProc);

TANGOAPI int TANGOCALL LSX_SendStringPosCmd (int lLSID, char *pcStr, char *pcRet, int lMaxLen, BOOL bReadLine, int lTimeOut);

TANGOAPI int TANGOCALL LSX_SetWriteLogTextFN (int lLSID, BOOL bAWriteLogText, char *pcALogFN);

TANGOAPI int TANGOCALL LSX_SetXYAxisComp (int lLSID, int lValue);

TANGOAPI int TANGOCALL LSX_GetVersionStrDet (int lLSID, char *pcVersDet, int lMaxLen);

TANGOAPI int TANGOCALL LSX_SetCommandTimeout (int lLSID, int lAtoRead, int lAtoMove, int lAtoCalibrate);

TANGOAPI int TANGOCALL LSX_SetExtValue (int lLSID, int lAName, int lAValue);

TANGOAPI int TANGOCALL LSX_FlushBuffer (int lLSID, int lAValue);

TANGOAPI int TANGOCALL LSX_GetEEPRomValue (int lLSID, byte Offset, byte *pValue);

TANGOAPI int TANGOCALL LSX_SetEEPRomValue (int lLSID, byte Offset, byte Value);

TANGOAPI int TANGOCALL LSX_GetXYAxisComp (int lLSID, int *plValue);

TANGOAPI int TANGOCALL LSX_GetDimensions (int lLSID, int *plXD, int *plYD, int *plZD, int *plAD);

TANGOAPI int TANGOCALL LSX_GetPitch (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetGear (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetVel (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetAccel (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_SetVelFac (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetVelFac (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetSpeedPoti (int lLSID, BOOL *pbSpePoti);

TANGOAPI int TANGOCALL LSX_GetMotorCurrent (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetReduction (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetCurrentDelay (int lLSID, int *plX, int *plY, int *plZ, int *plR);

TANGOAPI int TANGOCALL LSX_SetOutFuncLev (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetOutFuncLev (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetActiveAxes (int lLSID, int *plFlags);

TANGOAPI int TANGOCALL LSX_GetAxisDirection (int lLSID, int *plXD, int *plYD, int *plZD, int *plAD);

TANGOAPI int TANGOCALL LSX_GetCalibOffset (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetRMOffset (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetCalibrateDir (int lLSID, int *plXD, int *plYD, int *plZD, int *plAD);

TANGOAPI int TANGOCALL LSX_SetCalibBackSpeed (int lLSID, int lSpeed);

TANGOAPI int TANGOCALL LSX_GetCalibBackSpeed (int lLSID, int *plSpeed);

TANGOAPI int TANGOCALL LSX_SetRefSpeed (int lLSID, int lSpeed);

TANGOAPI int TANGOCALL LSX_GetRefSpeed (int lLSID, int *plSpeed);

TANGOAPI int TANGOCALL LSX_SetPowerAmplifier (int lLSID, BOOL bAmplifier);

TANGOAPI int TANGOCALL LSX_GetPowerAmplifier (int lLSID, BOOL *pbAmplifier);

TANGOAPI int TANGOCALL LSX_SetMotorTablePatch (int lLSID, BOOL bActive);

TANGOAPI int TANGOCALL LSX_GetMotorTablePatch (int lLSID, BOOL *pbActive);

TANGOAPI int TANGOCALL LSX_SetJoystickFilter (int lLSID, BOOL bActive);

TANGOAPI int TANGOCALL LSX_GetJoystickFilter (int lLSID, BOOL *pbActive);

TANGOAPI int TANGOCALL LSX_SetStopPolarity (int lLSID, BOOL bHighActiv);

TANGOAPI int TANGOCALL LSX_GetStopPolarity (int lLSID, BOOL *pbHighActiv);

TANGOAPI int TANGOCALL LSX_SetVLevel (int lLSID, int lVRegion, double dDownLevel, double dUppLevel);

TANGOAPI int TANGOCALL LSX_GetVLevel (int lLSID, int lVRegion, double *pdDownLevel, double *pdUppLevel);

TANGOAPI int TANGOCALL LSX_SetStopAccel (int lLSID, double dXD, double dYD, double dZD, double dAD);

TANGOAPI int TANGOCALL LSX_GetStopAccel (int lLSID, double *pdXD, double *pdYD, double *pdZD, double *pdAD);

TANGOAPI int TANGOCALL LSX_GetVersionStrInfo (int lLSID, char *pcVersInfo, int lMaxLen);

TANGOAPI int TANGOCALL LSX_GetStatusLimit (int lLSID, char *pcLimit, int lMaxLen);

TANGOAPI int TANGOCALL LSX_GetSecurityErr (int lLSID, DWORD *pdwValue);

TANGOAPI int TANGOCALL LSX_GetSecurityStatus (int lLSID, DWORD *pdwValue);

TANGOAPI int TANGOCALL LSX_GetDelay (int lLSID, int *plDelay);

TANGOAPI int TANGOCALL LSX_GetDistance (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_ClearPos (int lLSID, int lFlags);

TANGOAPI int TANGOCALL LSX_SetDigJoySpeed (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetDigJoySpeed (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetJoystickDir (int lLSID, int *plXD, int *plYD, int *plZD, int *plRD);

TANGOAPI int TANGOCALL LSX_GetJoystick (int lLSID, BOOL *pbJoystickOn, BOOL *pbManual, BOOL *pbPositionCount, BOOL *pbEncoder);

TANGOAPI int TANGOCALL LSX_GetJoystickWindow (int lLSID, int *plAValue);

TANGOAPI int TANGOCALL LSX_GetHandWheel (int lLSID, BOOL *pbHandWheelOn, BOOL *pbPositionCount, BOOL *pbEncoder);

TANGOAPI int TANGOCALL LSX_GetBPZ (int lLSID, int *plAValue);

TANGOAPI int TANGOCALL LSX_GetBPZTrackballFactor (int lLSID, double *pdAValue);

TANGOAPI int TANGOCALL LSX_GetBPZTrackballBackLash (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetBPZJoyspeed (int lLSID, int lAPar, double *pdAValue);

TANGOAPI int TANGOCALL LSX_GetLimitControl (int lLSID, int lAxis, BOOL *pbActive);

TANGOAPI int TANGOCALL LSX_SetAutoLimitAfterCalibRM (int lLSID, int lFlags);

TANGOAPI int TANGOCALL LSX_GetAutoLimitAfterCalibRM (int lLSID, int *plFlags);

TANGOAPI int TANGOCALL LSX_GetSwitchPolarity (int lLSID, int *plXP, int *plYP, int *plZP, int *plRP);

TANGOAPI int TANGOCALL LSX_GetSwitchActive (int lLSID, int *plXA, int *plYA, int *plZA, int *plRA);

TANGOAPI int TANGOCALL LSX_GetTVRMode (int lLSID, int *plXT, int *plYT, int *plZT, int *plRT);

TANGOAPI int TANGOCALL LSX_GetFactorTVR (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_SetTVROutMode (int lLSID, int lXT, int lYT, int lZT, int lRT);

TANGOAPI int TANGOCALL LSX_GetTVROutMode (int lLSID, int *plXT, int *plYT, int *plZT, int *plRT);

TANGOAPI int TANGOCALL LSX_SetTVROutResolution (int lLSID, int lX, int lY, int lZ, int lR);

TANGOAPI int TANGOCALL LSX_GetTVROutResolution (int lLSID, int *plX, int *plY, int *plZ, int *plR);

TANGOAPI int TANGOCALL LSX_SetTVROutPitch (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetTVROutPitch (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_SetVelTVRO (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetVelTVRO (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_SetAccelTVRO (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetAccelTVRO (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_SetVelSingleAxisTVRO (int lLSID, int lAxis, double dVel);

TANGOAPI int TANGOCALL LSX_SetAccelSingleAxisTVRO (int lLSID, int lAxis, double dAccel);

TANGOAPI int TANGOCALL LSX_SetPosTVRO (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetPosTVRO (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_MoveAbsTVRO (int lLSID, double dX, double dY, double dZ, double dR, BOOL bWait);

TANGOAPI int TANGOCALL LSX_MoveRelTVRO (int lLSID, double dX, double dY, double dZ, double dR, BOOL bWait);

TANGOAPI int TANGOCALL LSX_MoveRelTVROSingleAxis (int lLSID, int lAxis, double dValue, BOOL bWait);

TANGOAPI int TANGOCALL LSX_MoveAbsTVROSingleAxis (int lLSID, int lAxis, double dValue, BOOL bWait);

TANGOAPI int TANGOCALL LSX_GetStatusTVRO (int lLSID, char *pcStat, int lMaxLen);

TANGOAPI int TANGOCALL LSX_GetTargetWindow (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetEncoderPeriod (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetEncoderRefSignal (int lLSID, int *plXR, int *plYR, int *plZR, int *plRR);

TANGOAPI int TANGOCALL LSX_GetEncoderPosition (int lLSID, BOOL *pbValue);

TANGOAPI int TANGOCALL LSX_GetEncoderActive (int lLSID, int *plFlags);

TANGOAPI int TANGOCALL LSX_GetController (int lLSID, int *plXC, int *plYC, int *plZC, int *plRC);

TANGOAPI int TANGOCALL LSX_GetControllerCall (int lLSID, int *plCtrCall);