Tango/DLL Examples/Delphi_XE8/Tango_DLL.pas


function LSX_SetBPZ(LSID: Integer; AValue: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetBPZTrackballFactor(LSID: Integer; AValue: Double): Integer; stdcall; external TangoDLL;
function LSX_SetBPZTrackballBackLash(LSID: Integer; X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_SetBPZJoyspeed(LSID: Integer; APar: Integer; AValue: Double): Integer; stdcall; external TangoDLL;
function LSX_SetJoystickWindow(LSID: Integer; AValue: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetCurrentDelay(LSID: Integer; X, Y, Z, R: Integer): Integer; stdcall; external TangoDLL;
function LSX_MoveEx(LSID: Integer; X, Y, Z, R: Double; Relative, Wait: LongBool; AxisCount: Integer): Integer; stdcall; external TangoDLL;
function LSX_WaitForAxisStop(LSID: Integer; AFlags: Integer; ATimeoutValue: Integer; var ATimeout: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SendStringPosCmd(LSID: Integer; Str, Ret: PAnsiChar; MaxLen: Integer; ReadLine: LongBool; TimeOut: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetDigitalOutputs(LSID: Integer; Value: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetWriteLogTextFN(LSID: Integer; AWriteLogText: LongBool; ALogFN: PAnsiChar): Integer; stdcall; external TangoDLL;
function LSX_SetDigitalOutputsE(LSID: Integer; Value: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetDigitalInputsE(LSID: Integer; var Value: Integer): Integer; stdcall; external TangoDLL;
function LSX_EnableCommandRetry(LSID: Integer; AValue: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SetXYAxisComp(LSID: Integer; Value: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetVersionStrDet(LSID: Integer; VersDet: PAnsiChar; MaxLen: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetCommandTimeout(LSID: Integer; AtoRead, AtoMove, AtoCalibrate: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetExtValue(LSID: Integer; AName, AValue: Integer): Integer; stdcall; external TangoDLL;
function LSX_FlushBuffer(LSID: Integer; AValue: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetProcessMessagesProc(LSID: Integer; Proc: Pointer): Integer; stdcall; external TangoDLL;
//#JL 20040305.2
function LSX_GetEEPRomValue(LSID: Integer; Offset: byte; var Value: byte): Integer; stdcall; external TangoDLL;
function LSX_SetEEPRomValue(LSID: Integer; Offset: byte; Value: byte): Integer; stdcall; external TangoDLL;
//end #JL 20040305.2
function LSX_GetXYAxisComp(LSID: Integer; var Value: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetDimensions(LSID: Integer; var XD, YD, ZD, AD: Integer): Integer; stdcall; external TangoDLL;                                                                                                     
function LSX_GetPitch(LSID: Integer; var X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_GetGear(LSID: Integer; var X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_GetVel(LSID: Integer; var X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_GetAccel(LSID: Integer; var X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_SetVelFac(LSID: Integer; X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetVelFac(LSID: Integer; var X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetSpeedPoti(LSID: Integer; var SpePoti: LongBool): Integer; stdcall; external TangoDLL;
function LSX_GetMotorCurrent(LSID: Integer; var X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_GetReduction(LSID: Integer; var X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_GetCurrentDelay(LSID: Integer; var X, Y, Z, R: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetOutFuncLev(LSID: Integer; X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetOutFuncLev(LSID: Integer; var X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetActiveAxes(LSID: Integer; var Flags: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetAxisDirection(LSID: Integer; var XD, YD, ZD, AD: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetCalibOffset(LSID: Integer; var X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetRMOffset(LSID: Integer; var X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetCalibrateDir(LSID: Integer; var XD, YD, ZD, AD: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetCalibBackSpeed(LSID: Integer; Speed: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetCalibBackSpeed(LSID: Integer; var Speed: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetRefSpeed(LSID: Integer; Speed: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetRefSpeed(LSID: Integer; var Speed: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetPowerAmplifier(LSID: Integer; Amplifier: LongBool): Integer; stdcall; external TangoDLL;
function LSX_GetPowerAmplifier(LSID: Integer; var Amplifier: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SetMotorTablePatch(LSID: Integer; Active: LongBool): Integer; stdcall; external TangoDLL;
function LSX_GetMotorTablePatch(LSID: Integer; var Active: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SetJoystickFilter(LSID: Integer; Active: LongBool): Integer; stdcall; external TangoDLL;
function LSX_GetJoystickFilter(LSID: Integer; var Active: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SetStopPolarity(LSID: Integer; HighActiv: LongBool): Integer; stdcall; external TangoDLL;
function LSX_GetStopPolarity(LSID: Integer; var HighActiv: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SetVLevel(LSID: Integer; VRegion: Integer; DownLevel, UppLevel: Double): Integer; stdcall; external TangoDLL;
function LSX_GetVLevel(LSID: Integer; VRegion: Integer; var DownLevel, UppLevel: Double): Integer; stdcall; external TangoDLL;
function LSX_SetStopAccel(LSID: Integer; XD, YD, ZD, AD: Double): Integer; stdcall; external TangoDLL;
function LSX_GetStopAccel(LSID: Integer; var XD, YD, ZD, AD: Double): Integer; stdcall; external TangoDLL;
function LSX_GetVersionStrInfo(LSID: Integer; VersInfo: PAnsiChar; MaxLen: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetStatusLimit(LSID: Integer; Limit: PAnsiChar; MaxLen: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetSecurityErr(LSID: Integer; var Value: LongWord): Integer; stdcall; external TangoDLL;
function LSX_GetSecurityStatus(LSID: Integer; var Value: LongWord): Integer; stdcall; external TangoDLL;
function LSX_GetDelay(LSID: Integer; var Delay: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetDistance(LSID: Integer; var X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_ClearPos(LSID: Integer; Flags: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetDigJoySpeed(LSID: Integer; X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetDigJoySpeed(LSID: Integer; var X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetJoystickDir(LSID: Integer; var XD, YD, ZD, RD: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetJoystick(LSID: Integer; var JoystickOn, Manual, PositionCount, Encoder: LongBool): Integer; stdcall; external TangoDLL;
function LSX_GetJoystickWindow(LSID: Integer; var AValue: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetHandWheel(LSID: Integer; var HandWheelOn, PositionCount, Encoder: LongBool): Integer; stdcall; external TangoDLL;
function LSX_GetBPZ(LSID: Integer; var AValue: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetBPZTrackballFactor(LSID: Integer; var AValue: Double): Integer; stdcall; external TangoDLL;
function LSX_GetBPZTrackballBackLash(LSID: Integer; var X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetBPZJoyspeed(LSID: Integer; APar: Integer; var AValue: Double): Integer; stdcall; external TangoDLL;
function LSX_GetLimitControl(LSID: Integer; Axis: Integer; var Active: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SetAutoLimitAfterCalibRM(LSID: Integer; Flags: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetAutoLimitAfterCalibRM(LSID: Integer; var Flags: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetSwitchPolarity(LSID: Integer; var XP, YP, ZP, RP: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetSwitchActive(LSID: Integer; var XA, YA, ZA, RA: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetTVRMode(LSID: Integer; var XT, YT, ZT, RT: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetFactorTVR(LSID: Integer; var X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_SetTVROutMode(LSID: Integer; XT, YT, ZT, RT: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetTVROutMode(LSID: Integer; var XT, YT, ZT, RT: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetTVROutResolution(LSID: Integer; X, Y, Z, R: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetTVROutResolution(LSID: Integer; var X, Y, Z, R: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetTVROutPitch(LSID: Integer; X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetTVROutPitch(LSID: Integer; var X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_SetVelTVRO(LSID: Integer; X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetVelTVRO(LSID: Integer; var X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_SetAccelTVRO(LSID: Integer; X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetAccelTVRO(LSID: Integer; var X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_SetVelSingleAxisTVRO(LSID: Integer; Axis: Integer; Vel: Double): Integer; stdcall; external TangoDLL;
function LSX_SetAccelSingleAxisTVRO(LSID: Integer; Axis: Integer; Accel: Double): Integer; stdcall; external TangoDLL;
function LSX_SetPosTVRO(LSID: Integer; X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetPosTVRO(LSID: Integer; var X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_MoveAbsTVRO(LSID: Integer; X, Y, Z, R: Double; Wait: LongBool): Integer; stdcall; external TangoDLL;
function LSX_MoveRelTVRO(LSID: Integer; X, Y, Z, R: Double; Wait: LongBool): Integer; stdcall; external TangoDLL;
function LSX_MoveRelTVROSingleAxis(LSID: Integer; Axis: Integer; Value: Double; Wait: LongBool): Integer; stdcall; external TangoDLL;
function LSX_MoveAbsTVROSingleAxis(LSID: Integer; Axis: Integer; Value: Double; Wait: LongBool): Integer; stdcall; external TangoDLL;
function LSX_GetStatusTVRO(LSID: Integer; Stat: PANsiChar; MaxLen: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetTargetWindow(LSID: Integer; X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetTargetWindow(LSID: Integer; var X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetEncoderPeriod(LSID: Integer; var X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetEncoderRefSignal(LSID: Integer; var XR, YR, ZR, RR: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetEncoderPosition(LSID: Integer; var Value: LongBool): Integer; stdcall; external TangoDLL;
function LSX_GetEncoderActive(LSID: Integer; var Flags: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetController(LSID: Integer; var XC, YC, ZC, RC: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetControllerCall(LSID: Integer; var CtrCall: Integer): Integer; stdcall; external TangoDLL;
